--- a/index.html
+++ b/index.html
@@ -1,85 +1,156 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Insure landing page</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
+    <title>Frontend Mentor | Insure landing page</title>
 
-  How we work
-  Blog
-  Account
-  View plans
-
-  Humanizing your insurance.
-
-  Get your life insurance coverage easier and faster. We blend our expertise 
-  and technology to help you find the plan that’s right for you. Ensure you 
-  and your loved ones are protected.
-
-  View plans
-
-  We’re different
-
-  Snappy Process
-
-  Our application process can be completed in minutes, not hours. Don’t get 
-  stuck filling in tedious forms.
-
-  Affordable Prices
-
-  We don’t want you worrying about high monthly costs. Our prices may be low, 
-  but we still offer the best coverage possible.
-
-  People First
-
-  Our plans aren’t full of conditions and clauses to prevent payouts. We make 
-  sure you’re covered when you need it.
-
-  Find out more about how we work
-
-  How we work
-
-  Our company
-
-  How we work
-  Why Insure?
-  View plans
-  Reviews
-
-  Help me
-
-  FAQ
-  Terms of use
-  Privacy policy
-  Cookies
-
-  Contact
-
-  Sales
-  Support
-  Live chat
-
-  Others
-
-  Careers
-  Press
-  Licenses
-
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+  </head>
+  <body>
+    <nav>
+      <div class="container">
+        <div class="flex">
+          <img src="./images/logo.svg" alt="logo" />
+          <ul>
+            <li><a href="#">HOW WE WORK</a></li>
+            <li><a href="#">BLOG</a></li>
+            <li><a href="#">ACCOUNT</a></li>
+            <li><a href="#" class="btn">WIEW PLANS</a></li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <header>
+      <div class="container">
+        <div class="flex">
+          <h1>Humanizing your insurance.</h1>
+          <p>
+            Get your life insurance coverage easier and faster. We blend our
+            expertise and technology to help you find the plan that's right for
+            you. Ensure you and your loved ones are protected.
+          </p>
+          <button class="btn">VIEW PLANS</button>
+        </div>
+        <div>
+          <img src="./images/image-intro-desktop.jpg" alt="intro" />
+        </div>
+      </div>
+    </header>
+    <section class="container">
+      <h2>We're different.</h2>
+      <div class="flex">
+        <div>
+          <img src="./images/icon-snappy-process.svg" alt="snappy" />
+          <h4>Snappy Process</h4>
+          <p>
+            Our application process can be completed in minutes,not hours.Don't
+            get stuck filling in tedious forms.
+          </p>
+        </div>
+        <div>
+          <img src="./images/icon-affordable-prices.svg" alt="prices" />
+          <h4>Affordable Prices</h4>
+          <p>
+            We don't want you worrying about high monthly costs.Our prices may
+            be low,but we still offer the best coverage possible.
+          </p>
+        </div>
+        <div>
+          <img src="./images/icon-people-first.svg" alt="people" />
+          <h4>People First</h4>
+          <p>
+            Our plans aren't full of conditions and clauses to prevent
+            payouts.We make sure you're covered when you need it.
+          </p>
+        </div>
+      </div>
+    </section>
+    <section class="container bg-violet">
+      <div class="flex">
+        <div>
+          <h2>Find out more how we work</h2>
+        </div>
+        <div>
+          <button class="btn">How we work</button>
+        </div>
+      </div>
+    </section>
+    <footer>
+      <div class="container">
+        <div class="flex">
+          <div><img src="./images/logo.svg" alt="logo" /></div>
+          <div>
+            <ul>
+              <li>
+                <a href="#"
+                  ><img src="./images/icon-facebook.svg" alt="facebook"
+                /></a>
+              </li>
+              <li>
+                <a href="#"
+                  ><img src="./images/icon-twitter.svg" alt="twitter"
+                /></a>
+              </li>
+              <li>
+                <a href="#"
+                  ><img src="./images/icon-pinterest.svg" alt="pinterest"
+                /></a>
+              </li>
+              <li>
+                <a href="#"
+                  ><img src="./images/icon-instagram.svg" alt="instagram"
+                /></a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="flex">
+          <div>
+            <h3>Our Company</h3>
+            <ul>
+              <li><a href="#">HOW WE WORK</a></li>
+              <li><a href="#">WHY INSURE</a></li>
+              <li><a href="#">VIEW PLANS</a></li>
+              <li><a href="#">REVIEWS</a></li>
+            </ul>
+          </div>
+          <div>
+            <h3>HELP ME</h3>
+            <ul>
+              <li><a href="#">FAQ</a></li>
+              <li><a href="#">TERMS OF USE</a></li>
+              <li><a href="#">PRIVACY POLICY</a></li>
+              <li><a href="#">COOKIES</a></li>
+            </ul>
+          </div>
+          <div>
+            <h3>CONTACT</h3>
+            <ul>
+              <li><a href="#">SALES</a></li>
+              <li><a href="#">SUPPORT</a></li>
+              <li><a href="#">LIVE CHAT</a></li>
+            </ul>
+          </div>
+          <div>
+            <h3>OTHERS</h3>
+            <ul>
+              <li><a href="#">CARREERS</a></li>
+              <li><a href="#">PRESS</a></li>
+              <li><a href="#">LICENSES</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </footer>
+  </body>
 </html>
